clusters/on-prem-cluster/apps/your-spotify/your-spotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-spotify
  namespace: your-spotify
  labels:
    app: your-spotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: your-spotify
  template:
    metadata:
      labels:
        app: your-spotify
    spec:
      containers:
      - name: your-spotify
        image: lscr.io/linuxserver/your_spotify:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 500m
            memory: 256Mi
        ports:
        - containerPort: 80
        - containerPort: 443
