clusters/on-prem-cluster/apps/your-spotify/your-spotify/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: your-spotify-ingress
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:Cqv8/zHyC8YGiuoCIJCQkjIMsTbmBI7a9wwOhQA=,iv:IDif0mQhYWNZwczeZJoS0ct8gSaN3CmPGaFzubZYcVs=,tag:5N9LI3f7WPv7+9ATz/w5jQ==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:sW7XSmFxVkveXaASd0nlGyBCutXuBNuzfCe3BH8=,iv:2Q5rvaz4RqBXgivuaah7rP1Pa2Pok9Us/65Apk+bsp0=,tag:nnpL6xmijLaRmO5oH4R+AA==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: your-spotify-service
                        port:
                            number: 443
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOZkJEZlZaMHZKeXI0R3p6
[...]
            NOOm0CR9d3yqFuq5Gq0dVXa6tuyBnnkib+gqA0nO/fvQmv4IZ8GiMQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-10-15T16:25:20Z"
    mac: ENC[AES256_GCM,data:vRB9HpsOzxkhD2K8FWG/+Ji+tulwT6s6rFfRSmh49YjoPzROY939tCJxO+MZ1gKUQbhIkFJVEPHDJii/WvyteaoUJMupYrBbOpZ4WMe1aG2z5HBusZs9Zgx/2mh0AfrY5nPRhjjYe2Y8h10QVyKyMDOQx+GvNIDZ5u0crMwZxA0=,iv:K2I0rJQxXcSItas3gLQd1LAVk7X7ZUR9Wv3e3taJ3Pw=,tag:8EzlTQXPWRket6c41h+0Mw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.7.3
